--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-    "name": "start",
-    "version": "2.0.2",
-    "author": "Tomo <@t0mtheenemy>",
-    "description": "An Angular Based Browser Start Page",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Tomo-san/start.git"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-watch": "~0.5.1",
-        "grunt-contrib-jshint": "~0.6.2",
-        "grunt-coffeelint": "0.0.7",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-recess": "~0.3.3",
-        "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-cssmin": "~0.6.1",
-        "grunt-contrib-uglify": "~0.2.2",
-        "grunt-uncss": "~0.1.3",
-        "grunt-processhtml": "~0.2.3"
-    },
-    "license": "WTFPL (Do What the Fuck You Want to Public License)"
+  "name": "start",
+  "version": "3.0.0",
+  "author": "Tomo <@tomopagu>",
+  "description": "A React Based Browser Start Page",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tomopagu/start.git"
+  },
+  "license": "WTFPL (Do What the Fuck You Want to Public License)",
+  "dependencies": {
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.15.4",
+    "cssnano": "^2.1.0",
+    "node-libs-browser": "^0.5.2",
+    "postcss": "^4.1.16",
+    "postcss-assets": "^2.1.2",
+    "postcss-loader": "^0.5.1",
+    "postcss-simple-vars": "^0.3.0",
+    "rucksack-css": "^0.3.1",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.10.1",
+    "json-loader": "^0.5.2",
+    "lost": "^6.5.0",
+    "moment": "^2.10.3",
+    "react": "^0.13.3",
+    "superagent": "^1.2.0",
+    "superagent-charset": "0.0.1",
+    "superagent-jsonp": "0.0.3"
+  }
 }
