--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.15.4",
     "cssnano": "^2.1.0",
+    "jquery": "^2.1.4",
+    "json-loader": "^0.5.2",
+    "lost": "^6.5.0",
+    "moment": "^2.10.3",
     "node-libs-browser": "^0.5.2",
     "postcss": "^4.1.16",
     "postcss-assets": "^2.1.2",
     "postcss-loader": "^0.5.1",
     "postcss-simple-vars": "^0.3.0",
+    "react": "^0.13.3",
     "rucksack-css": "^0.3.1",
     "style-loader": "^0.12.3",
-    "webpack": "^1.10.1",
-    "json-loader": "^0.5.2",
-    "lost": "^6.5.0",
-    "moment": "^2.10.3",
-    "react": "^0.13.3",
-    "superagent": "^1.2.0",
-    "superagent-charset": "0.0.1",
-    "superagent-jsonp": "0.0.3"
-  }
+    "webpack": "^1.10.1"
+  },
+  "devDependencies": {}
 }
