--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "start",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "author": "Tomo <@tomopagu>",
   "description": "A React Based Browser Start Page",
   "repository": {
     "type": "git",
     "url": "https://github.com/tomopagu/start.git"
   },
+  "scripts": {
+    "run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
+    "build": "export NODE_ENV=production && ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js",
+    "start": "node node_modules/http-server/bin/http-server -p 5000"
+  },
   "license": "WTFPL (Do What the Fuck You Want to Public License)",
   "dependencies": {
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.15.4",
-    "cssnano": "^2.1.0",
-    "jquery": "^2.1.4",
-    "json-loader": "^0.5.2",
-    "lost": "^6.5.0",
-    "moment": "^2.10.3",
-    "node-libs-browser": "^0.5.2",
-    "postcss": "^4.1.16",
-    "postcss-assets": "^2.1.2",
-    "postcss-loader": "^0.5.1",
-    "postcss-simple-vars": "^0.3.0",
-    "react": "^0.13.3",
-    "rucksack-css": "^0.3.1",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.10.1"
+    "es6-promise": "^3.1.2",
+    "http-server": "^0.9.0",
+    "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.13.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^5.0.1",
+    "radium": "^0.17.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
