--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "WTFPL (Do What the Fuck You Want to Public License)",
   "dependencies": {
     "es6-promise": "^3.1.2",
+    "fetch-jsonp": "^1.0.0",
     "http-server": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.13.0"
