--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fetch-jsonp": "^1.0.0",
     "http-server": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "reflexbox": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
@@ -30,10 +31,12 @@
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-loader": "^1.3.0",
+    "eslint-plugin-import": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.1",
-    "radium": "^0.17.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-look": "^1.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
