Make the build task use production env

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/tomopagu/start.git"
   },
   "scripts": {
-    "run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
-    "build": "export NODE_ENV=production && ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js",
+	"run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
+    "build": "./node_modules/webpack/bin/webpack.js -p --config webpack.config.js",
     "start": "node node_modules/http-server/bin/http-server -p 5000"
   },
   "license": "WTFPL (Do What the Fuck You Want to Public License)",
