--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/tomopagu/start.git"
   },
   "scripts": {
-	"run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
+    "run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
     "build": "./node_modules/webpack/bin/webpack.js -p --config webpack.config.js",
     "start": "node node_modules/http-server/bin/http-server -p 5000"
   },
@@ -18,7 +18,9 @@
     "fetch-jsonp": "^1.0.0",
     "http-server": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.13.1",
     "moment": "^2.13.0",
+    "react-addons-create-fragment": "^15.2.1",
     "reflexbox": "^1.1.2"
   },
   "devDependencies": {
