--- a/package.json
+++ b/package.json
@@ -1,46 +1,30 @@
 {
   "name": "start",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "author": "Tomo <@tomopagu>",
   "description": "A React Based Browser Start Page",
   "repository": {
     "type": "git",
     "url": "https://github.com/tomopagu/start.git"
   },
-  "scripts": {
-    "run": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --inline",
-    "build": "./node_modules/webpack/bin/webpack.js -p --config webpack.config.js",
-    "deploy": "npm run build && ns ."
-  },
   "license": "WTFPL (Do What the Fuck You Want to Public License)",
-  "dependencies": {
-    "es6-promise": "^3.1.2",
-    "fetch-jsonp": "^1.0.0",
-    "http-server": "^0.9.0",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.13.1",
-    "moment": "^2.13.0",
-    "react-addons-create-fragment": "^15.2.1",
-    "reflexbox": "^1.1.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.5.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^5.0.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-look": "^1.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+  "jspm": {
+    "dependencies": {
+      "es6-promise": "npm:es6-promise@^3.3.1",
+      "fetch-jsonp": "npm:fetch-jsonp@^1.0.1",
+      "isomorphic-fetch": "npm:isomorphic-fetch@^2.2.1",
+      "lodash": "npm:lodash@^4.16.1",
+      "moment": "npm:moment@^2.15.1",
+      "react": "npm:react@^15.3.2",
+      "react-addons-create-fragment": "npm:react-addons-create-fragment@^15.3.2",
+      "react-dom": "npm:react-dom@^15.3.2",
+      "react-look": "npm:react-look@^1.0.1",
+      "reflexbox": "npm:reflexbox@^2.2.1"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
