--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axs": "^2.0.0-1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-modal": "^2.2.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.0",
+    "redux-localstorage": "^0.4.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
