--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axs": "^2.0.0-1",
     "lodash": "^4.17.4",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
+    "rebass": "^1.0.3",
     "redux": "^3.7.0",
-    "redux-localstorage": "^0.4.1"
+    "redux-localstorage": "^0.4.1",
+    "uigradients": "^0.2.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
