--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axs": "^2.0.0-1",
     "date-fns": "^1.28.5",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
