Add the now alias to hopefully make deployments easier

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "react-scripts": "1.0.7"
   },
+  "now": {
+    "alias": "start.uchuu.io"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
