--- a/package.json
+++ b/package.json
@@ -20,13 +20,25 @@
   "devDependencies": {
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.6.1",
+    "husky": "^0.14.3",
     "jest-enzyme": "^4.0.0",
+    "precise-commits": "^1.0.1",
+    "prettier": "^1.10.2",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint src/**/*.js src/**/*.jsx",
+    "precommit": "precise-commits",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
