--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "start",
-  "version": "0.1.0",
+  "version": "6.0.0-beta",
   "private": true,
   "dependencies": {
     "axs": "^2.0.0-1",
@@ -31,10 +31,12 @@
     "eslint-plugin-react": "^7.6.1",
     "husky": "^0.14.3",
     "jest-enzyme": "^4.0.0",
+    "jest-fetch-mock": "^1.4.2",
     "precise-commits": "^1.0.1",
     "prettier": "^1.10.2",
     "react-scripts": "1.1.1",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.0.0",
+    "sinon": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
