--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axs": "^2.0.0-1",
-    "date-fns": "^2.0.0-alpha.7",
+    "date-fns": "2.0.0-alpha.7",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
@@ -15,6 +15,7 @@
     "rebass": "^1.0.3",
     "redux": "^3.7.0",
     "redux-localstorage": "^0.4.1",
+    "redux-promise-middleware": "^5.1.1",
     "styled-components": "^3.1.6",
     "uigradients": "^0.2.1"
   },
