--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest-fetch-mock": "^1.4.2",
     "precise-commits": "^1.0.1",
     "prettier": "^1.10.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "1.1.4",
     "react-test-renderer": "^16.0.0",
     "sinon": "^4.4.2"
   },
@@ -45,6 +45,7 @@
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "precommit": "precise-commits",
     "test": "react-scripts test --env=jsdom --coverage",
+    "test:watch": "react-scripts test --env=jsdom --coverage --watch",
     "eject": "react-scripts eject"
   }
 }
