Update for NowV2

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ deploy:
     script: now --token $NOW_TOKEN
     skip_cleanup: true
     on:
-      master: false
-      all_branches: true
+      condition: $TRAVIS_BRANCH != master
   - provider: script
     script: now --token $NOW_TOKEN && now alias --token $NOW_TOKEN
     skip_cleanup: true
