--- a/now.json
+++ b/now.json
@@ -1,4 +1,11 @@
 {
+  "version": 2,
   "alias": "start.uchuu.io",
-  "type": "static"
+  "builds": [
+    { "src": "./build/**/*", "use": "@now/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/build/$1" }
+  ],
+  "regions": ["bru"]
 }
