Make sure to run the build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ cache:
 script: npm test # Here you could also run the build step of your application
 after_script:
   - cat ./coverage/lcov.info | coveralls
-before_deploy: npm install now --no-save # Install Now CLI on Travis
+before_deploy:
+  - npm run build # Build script
+  - npm install now --no-save # Install Now CLI on Travis
 deploy:
   - provider: script # Run a custom deployment script which we will define below
     script: now --token $NOW_TOKEN
