--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "start",
-  "version": "7.1.0",
+  "name": "@tomouchuu/start",
+  "type": "module",
+  "version": "8.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.5",
-    "date-fns": "^2.24.0",
-    "next": "11.1.2",
-    "postcss": "^8.3.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.0.1",
-    "tailwindcss": "^2.2.15"
-  },
-  "devDependencies": {
-    "@types/node": "^16.9.6",
-    "@types/react": "^17.0.24",
-    "typescript": "^4.4.3"
+    "@astrojs/react": "^1.2.2",
+    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/vercel": "^2.3.4",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "astro": "^1.6.11",
+    "date-fns": "^2.23.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
