--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tomouchuu/start",
   "type": "module",
-  "version": "8.0.0",
+  "version": "8.1.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -11,13 +11,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "@astrojs/vercel": "^2.3.4",
+    "astro": "latest",
+    "date-fns": "^2.23.0"
+  },
+  "devDependencies": {
+    "@astrojs/node": "latest",
+    "@astrojs/react": "latest",
+    "@astrojs/tailwind": "latest",
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "astro": "^1.6.11",
-    "date-fns": "^2.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
