--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/node": "latest",
     "@astrojs/react": "latest",
     "@astrojs/tailwind": "latest",
+    "@flydotio/dockerfile": "latest",
     "@types/date-fns": "^2.6.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
